# reason-oidc-proxy

./: .dockerignore  .gitignore  Dockerfile  README.md  esy.lock.json  package.json
esy.lock/: index.json
oidc/: Discover.re  Jwks.re  Jwt.re  dune
test/exe/: RevouchTest.re  dune
test/lib/: TestFramework.re  dune
test/revouch/: TestFramework.re  TestFramewrok.re  dune
