(library
  (name oidc)
  (public_name revouch)
  (flags (-w -40 -w +26))
  (libraries
    lwt
    logs
    
    httpaf
    httpaf-lwt

    httpkit
    httpkit-lwt

    yojson
    str
    containers
    nocrypto
    jwt
  ))

(env
  (dev (flags (:standard -g)))
  (docker (flags (:standard -ccopt -static))))
